--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@replit/ai-modelfarm": "^0.0.3",
     "@types/node": "^18.0.6",
     "@xmpp/client": "^0.13.1",
     "dotenv": "^16.3.1",
